DatePicker initial commit
Change-Id: I5e2dda38b06b76454b974e7240befd6a9316364f

--- a/res/color/date_picker_selector.xml
+++ b/res/color/date_picker_selector.xml
@@ -13,14 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.datetimepicker"
-    android:versionCode="1"
-    android:versionName="1.0" >
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="17" />
+    <item android:state_pressed="true" android:color="@color/selected_text"/>
+    <item android:state_selected="true" android:color="@color/selected_text"/>
+    <item android:state_pressed="false" android:state_selected="false"
+        android:color="@color/calendar_selected_date_text"/>
 
-    <uses-permission android:name="android.permission.VIBRATE" />
-</manifest>
+</selector>
