--- a/res/values-land/dimens.xml
+++ b/res/values-land/dimens.xml
@@ -20,6 +20,8 @@
 <resources
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <dimen name="dialog_height">300dip</dimen>
     <dimen name="left_side_width">270dip</dimen>
+    <dimen name="date_picker_dialog_height">282dip</dimen>
 </resources>
