--- a/res/values-sw600dp-land/dimens.xml
+++ b/res/values-sw600dp-land/dimens.xml
@@ -17,9 +17,9 @@
 */
 -->
 
-<resources
-    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" 
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <dimen name="time_label_right_padding">16sp</dimen>
     <dimen name="time_label_size">64sp</dimen>
     <dimen name="ampm_label_size">21sp</dimen>
@@ -28,4 +28,6 @@
     <dimen name="separator_padding">5dip</dimen>
     <dimen name="header_height">96dip</dimen>
     <dimen name="footer_height">48dip</dimen>
+    <dimen name="date_picker_dialog_height">410dip</dimen>
+
 </resources>
