Further tweaks and bug fixes, and code cleanup.
Bug: 8530194
Bug: 8531032
Change-Id: I908e7df4a432f9f6b338bc601e7be08f26b93b98

--- a/res/layout-land/date_picker_dialog.xml
+++ b/res/layout-land/date_picker_dialog.xml
@@ -31,7 +31,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dip"
-            android:background="@color/black_20" />
+            android:background="@color/line_background" />
 
         <include layout="@layout/date_picker_done_button" />
     </LinearLayout>
@@ -39,7 +39,7 @@
     <View
         android:layout_width="1dip"
         android:layout_height="match_parent"
-        android:background="@color/black_20" />
+        android:background="@color/line_background" />
 
     <FrameLayout
         android:layout_width="@dimen/pager_width"
