--- a/res/layout/date_picker_dialog.xml
+++ b/res/layout/date_picker_dialog.xml
@@ -33,7 +33,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/black_20" />
+        android:background="@color/line_background" />
 
     <include layout="@layout/date_picker_done_button"
         android:id="@+id/date_picker_done_button" />
