--- a/res/values-sw600dp-land/dimens.xml
+++ b/res/values-sw600dp-land/dimens.xml
@@ -17,7 +17,7 @@
 */
 -->
 
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" 
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <dimen name="time_label_right_padding">16sp</dimen>
@@ -30,4 +30,5 @@
     <dimen name="footer_height">48dip</dimen>
     <dimen name="date_picker_dialog_height">410dip</dimen>
 
+    <dimen name="left_side_width">315dip</dimen>
 </resources>
