--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,11 +17,13 @@
 <resources>
 
     <color name="white">#ffffff</color>
-    <color name="black_03">#08000000</color>
-    <color name="black_20">#33000000</color>
-    <color name="black_50">#7F000000</color>
-    <color name="black_60">#99000000</color>
-    <color name="black_80">#CC000000</color>
+    <color name="circle_background">#08000000</color>
+    <color name="line_background">#33000000</color>
+    <color name="ampm_text_color">#7F000000</color>
+    <color name="done_text_color">#99000000</color>
+    <color name="numbers_text_color">#CC000000</color>
+
+    <color name="transparent_black">#7F000000</color>
     <color name="blue">#33b5e5</color>
 
     <color name="calendar_header">#999999</color>
