--- a/res/layout-land/date_picker_dialog.xml
+++ b/res/layout-land/date_picker_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
+<!--
+     Copyright (C) 2013 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -23,8 +24,8 @@
         android:layout_width="@dimen/date_picker_width"
         android:layout_height="@dimen/date_picker_dialog_height"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:background="@color/white" >
+        android:background="@color/white"
+        android:orientation="vertical" >
 
         <include layout="@layout/date_picker_selected_date" />
 
@@ -44,14 +45,15 @@
     <FrameLayout
         android:layout_width="@dimen/pager_width"
         android:layout_height="match_parent"
-        android:background="@color/calendar_pager"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:background="@color/calendar_pager" >
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <ViewAnimator
+            android:id="@+id/animator"
             android:layout_width="@dimen/pager_width"
             android:layout_height="@dimen/pager_height"
-            android:layout_gravity="center"
+            android:background="@color/calendar_pager"
             android:gravity="center" />
     </FrameLayout>
+
 </LinearLayout>
