--- a/res/layout/date_picker_selected_date.xml
+++ b/res/layout/date_picker_selected_date.xml
@@ -32,36 +32,55 @@
         android:textColor="@color/white"
         android:textSize="@dimen/date_picker_header_text_size" />
 
-    <TextView
-        android:id="@+id/date_picker_month"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
-        android:gravity="center_horizontal|bottom"
-        android:includeFontPadding="false"
-        android:textColor="@color/date_picker_selector"
-        android:textSize="@dimen/selected_date_month_size" />
-
-    <TextView
-        android:id="@+id/date_picker_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="-10dip"
-        android:layout_marginTop="-10dip"
         android:gravity="center"
-        android:includeFontPadding="false"
-        android:textColor="@color/date_picker_selector"
-        android:textSize="@dimen/selected_date_day_size" />
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/date_picker_year"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:gravity="center_horizontal|top"
-        android:includeFontPadding="false"
-        android:textColor="@color/date_picker_selector"
-        android:textSize="@dimen/selected_date_year_size" />
+        <LinearLayout
+            android:id="@+id/date_picker_month_and_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:orientation="vertical"
+            android:textColor="@color/date_picker_selector" >
+
+            <TextView
+                android:id="@+id/date_picker_month"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="true"
+                android:gravity="center_horizontal|bottom"
+                android:includeFontPadding="false"
+                android:textColor="@color/date_picker_selector"
+                android:textSize="@dimen/selected_date_month_size" />
+
+            <TextView
+                android:id="@+id/date_picker_day"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="-10dip"
+                android:layout_marginTop="-10dip"
+                android:duplicateParentState="true"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:textColor="@color/date_picker_selector"
+                android:textSize="@dimen/selected_date_day_size" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/date_picker_year"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal|top"
+            android:includeFontPadding="false"
+            android:textColor="@color/date_picker_selector"
+            android:textSize="@dimen/selected_date_year_size" />
+    </LinearLayout>
 
 </LinearLayout>
