--- a/res/layout-land/time_picker_dialog.xml
+++ b/res/layout-land/time_picker_dialog.xml
@@ -25,18 +25,18 @@
     android:layout_marginTop="@dimen/minimum_margin_top_bottom"
     android:layout_marginBottom="@dimen/minimum_margin_top_bottom" >
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/left_side_width"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <FrameLayout
-            android:layout_width="@dimen/left_side_width"
+            android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
             android:background="@color/white" >
             <include
                 layout="@layout/time_header_label"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/header_height"
                 android:layout_gravity="center" />
         </FrameLayout>
         <View
