--- a/res/layout/time_header_label.xml
+++ b/res/layout/time_header_label.xml
@@ -16,23 +16,43 @@
   -->
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center" >
+      android:layout_height="match_parent"
+      android:layout_gravity="center"
+      android:background="@color/white" >
         <View
             android:id="@+id/empty_view"
             android:layout_width="1dp"
             android:layout_height="1dp"
             android:background="#00000000"
             android:layout_centerInParent="true" />
-        <com.android.datetimepicker.FakeButton
-            android:id="@+id/hours"
+        <TextView
+            android:id="@+id/hour_space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/time_placeholder"
-            android:textColor="@color/blue"
             android:layout_toLeftOf="@+id/separator"
             android:layout_centerVertical="true"
-            style="@style/time_label" />
+            android:visibility="invisible"
+            style="@style/time_label"
+            android:importantForAccessibility="no" />
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_alignRight="@+id/hour_space"
+            android:layout_alignLeft="@+id/hour_space"
+            android:layout_marginLeft="@dimen/extra_time_label_margin"
+            android:layout_marginRight="@dimen/extra_time_label_margin"
+            android:layout_centerVertical="true" >
+            <com.android.datetimepicker.FakeButton
+                android:id="@+id/hours"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time_placeholder"
+                android:textColor="@color/blue"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center"
+                style="@style/time_label" />
+            </FrameLayout>
         <TextView
             android:id="@+id/separator"
             android:layout_width="wrap_content"
@@ -44,20 +64,39 @@
             android:layout_centerVertical="true"
             style="@style/time_label"
             android:importantForAccessibility="no" />
-        <com.android.datetimepicker.FakeButton
-            android:id="@+id/minutes"
+        <TextView
+            android:id="@+id/minutes_space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/time_placeholder"
             android:layout_toRightOf="@+id/separator"
             android:layout_centerVertical="true"
-            style="@style/time_label" />
+            android:visibility="invisible"
+            style="@style/time_label"
+            android:importantForAccessibility="no" />
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_alignRight="@+id/minutes_space"
+            android:layout_alignLeft="@+id/minutes_space"
+            android:layout_marginLeft="@dimen/extra_time_label_margin"
+            android:layout_marginRight="@dimen/extra_time_label_margin"
+            android:layout_centerVertical="true" >
+            <com.android.datetimepicker.FakeButton
+                android:id="@+id/minutes"
+                style="@style/time_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/time_placeholder"
+                android:layout_gravity="center" />
+        </FrameLayout>
         <com.android.datetimepicker.FakeButton
             android:id="@+id/ampm_hitspace"
             android:layout_width="@dimen/ampm_label_size"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/minutes"
-            android:layout_alignBottom="@+id/minutes"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/ampm_label"
             android:layout_alignRight="@+id/ampm_label" />
         <TextView
@@ -67,8 +106,8 @@
             android:text="@string/time_placeholder"
             android:paddingLeft="@dimen/ampm_left_padding"
             android:paddingRight="@dimen/ampm_left_padding"
-            android:layout_toRightOf="@+id/minutes"
-            android:layout_alignBaseline="@+id/minutes"
+            android:layout_toRightOf="@+id/minutes_space"
+            android:layout_alignBaseline="@+id/separator"
             style="@style/ampm_label"
             android:importantForAccessibility="no" />
   </RelativeLayout>
