--- a/res/values-sw600dp/dimens.xml
+++ b/res/values-sw600dp/dimens.xml
@@ -40,6 +40,7 @@
     <dimen name="month_day_label_text_size">15sp</dimen>
 
     <dimen name="time_label_size">75sp</dimen>
+    <dimen name="extra_time_label_margin">-50dp</dimen>
     <dimen name="ampm_label_size">20sp</dimen>
     <dimen name="ampm_left_padding">8dip</dimen>
     <dimen name="separator_padding">5dip</dimen>
