--- a/res/color/date_picker_selector.xml
+++ b/res/color/date_picker_selector.xml
@@ -15,9 +15,9 @@
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true" android:color="@color/selected_text"/>
-    <item android:state_selected="true" android:color="@color/selected_text"/>
+    <item android:state_pressed="true" android:color="@color/darker_blue"/>
+    <item android:state_pressed="false" android:state_selected="true" android:color="@color/blue"/>
     <item android:state_pressed="false" android:state_selected="false"
-        android:color="@color/calendar_selected_date_text"/>
+        android:color="@color/date_picker_text_normal"/>
 
 </selector>
