--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -48,15 +48,15 @@
     <dimen name="done_button_height">42dp</dimen>
     <dimen name="date_picker_header_height">30dp</dimen>
     <dimen name="month_list_item_header_height">50dp</dimen>
-    <dimen name="month_list_item_padding">16dp</dimen>
     <dimen name="month_day_label_text_size">10sp</dimen>
     <dimen name="day_number_select_circle_radius">16dp</dimen>
-    <dimen name="month_select_circle_radius">24dp</dimen>
+    <dimen name="month_select_circle_radius">45dp</dimen>
     <dimen name="selected_date_year_size">30dp</dimen>
     <dimen name="selected_date_day_size">75dp</dimen>
     <dimen name="selected_date_month_size">30dp</dimen>
     <dimen name="date_picker_header_text_size">14dp</dimen>
     <dimen name="month_label_size">16sp</dimen>
     <dimen name="day_number_size">16sp</dimen>
-    <dimen name="month_list_item_size">16sp</dimen>
+    <dimen name="year_label_height">64dp</dimen>
+    <dimen name="year_label_text_size">22dp</dimen>
 </resources>
