--- a/res/layout-sw270dp-h560dp-land/date_picker_dialog.xml
+++ b/res/layout-sw270dp-h560dp-land/date_picker_dialog.xml
@@ -16,23 +16,26 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/date_picker_dialog_height"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal" >
 
     <LinearLayout
-        android:layout_width="@dimen/date_picker_width"
-        android:layout_height="@dimen/date_picker_dialog_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/white"
         android:orientation="vertical" >
 
         <include layout="@layout/date_picker_header_view" />
 
-        <include layout="@layout/date_picker_selected_date" />
+        <include
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            layout="@layout/date_picker_selected_date" />
 
         <View
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/date_picker_component_width"
             android:layout_height="1dip"
             android:background="@color/line_background" />
 
@@ -41,21 +44,9 @@
 
     <View
         android:layout_width="1dip"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/date_picker_view_animator_height"
         android:background="@color/line_background" />
 
-    <FrameLayout
-        android:layout_width="@dimen/pager_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="@color/calendar_pager" >
-
-        <ViewAnimator
-            android:id="@+id/animator"
-            android:layout_width="@dimen/pager_width"
-            android:layout_height="@dimen/pager_height"
-            android:background="@color/calendar_pager"
-            android:gravity="center" />
-    </FrameLayout>
+    <include layout="@layout/date_picker_view_animator" />
 
 </LinearLayout>
