--- a/res/layout-sw270dp-h560dp/date_picker_dialog.xml
+++ b/res/layout-sw270dp-h560dp/date_picker_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
+<!--
+     Copyright (C) 2013 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,29 +15,29 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/date_picker_width"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:background="@color/date_picker_view_animator"
     android:gravity="center"
-    android:orientation="vertical"
-    android:background="@color/calendar_pager" >
+    android:orientation="vertical" >
 
-    <include layout="@layout/date_picker_header_view" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/selected_calendar_layout_height"
+        android:orientation="vertical" >
 
-    <include layout="@layout/date_picker_selected_date"
-        android:id="@+id/date_picker_selected_date_layout" />
+        <include layout="@layout/date_picker_header_view" />
 
-    <ViewAnimator
-        android:id="@+id/animator"
-        android:layout_width="@dimen/pager_width"
-        android:layout_height="@dimen/pager_height"
-        android:gravity="center"
-        android:background="@color/calendar_pager" />
+        <include layout="@layout/date_picker_selected_date" />
+    </LinearLayout>
+
+    <include layout="@layout/date_picker_view_animator" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:background="@color/line_background" />
 
-    <include layout="@layout/date_picker_done_button"
-        android:id="@+id/date_picker_done_button" />
+    <include layout="@layout/date_picker_done_button" />
+
 </LinearLayout>
