--- a/res/layout/date_picker_selected_date.xml
+++ b/res/layout/date_picker_selected_date.xml
@@ -17,8 +17,9 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/day_picker_selected_date_layout"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/selected_date_layout_height"
+    android:layout_width="@dimen/date_picker_component_width"
+    android:layout_height="0dip"
+    android:layout_weight="1"
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical" >
