--- a/res/layout/date_picker_view_animator.xml
+++ b/res/layout/date_picker_view_animator.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2013 The Android Open Source Project
+<!-- Copyright (C) 2013 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +13,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/date_picker_header"
-    android:layout_width="@dimen/date_picker_component_width"
-    android:layout_height="@dimen/date_picker_header_height"
-    android:background="@color/calendar_header"
-    android:gravity="center"
-    android:includeFontPadding="false"
-    android:textColor="@color/white"
-    android:textSize="@dimen/date_picker_header_text_size" />
+<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+     android:id="@+id/animator"
+     android:layout_width="@dimen/date_picker_component_width"
+     android:layout_height="@dimen/date_picker_view_animator_height"
+     android:gravity="center"
+     android:background="@color/date_picker_view_animator" />
