--- a/res/values-sw600dp/dimens.xml
+++ b/res/values-sw600dp/dimens.xml
@@ -20,11 +20,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" 
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <dimen name="pager_height">400dp</dimen>
-    <dimen name="pager_width">400dp</dimen>
-    <dimen name="date_picker_width">400dp</dimen>
-    <dimen name="selected_date_layout_height">360dp</dimen>
-    <dimen name="done_button_height">42dp</dimen>
+    <dimen name="date_picker_component_width">400dp</dimen>
+    <dimen name="date_picker_view_animator_height">400dp</dimen>
+    <dimen name="selected_calendar_layout_height">360dp</dimen>
     <dimen name="date_picker_header_height">45dp</dimen>
     <dimen name="month_list_item_header_height">75dp</dimen>
     <dimen name="month_list_item_padding">24dp</dimen>
@@ -33,6 +31,8 @@
     <dimen name="selected_date_year_size">45dp</dimen>
     <dimen name="selected_date_day_size">150dp</dimen>
     <dimen name="selected_date_month_size">45dp</dimen>
+    <dimen name="year_label_height">96dp</dimen>
+    <dimen name="year_label_text_size">33dp</dimen>
     <dimen name="date_picker_header_text_size">21dp</dimen>
     <dimen name="month_list_item_size">24sp</dimen>
     <dimen name="month_label_size">24sp</dimen>
@@ -48,6 +48,6 @@
     <dimen name="footer_height">60dip</dimen>
     <dimen name="minimum_margin_sides">48dip</dimen>
     <dimen name="minimum_margin_top_bottom">24dip</dimen>
-
     <dimen name="picker_dimen">375dip</dimen>
+
 </resources>
