Polishing accessibility for date picker.
Bug: 8531032
Change-Id: Idff339300a8edcd353b4d8e37e8b218b7b99460b

--- a/res/layout/date_picker_header_view.xml
+++ b/res/layout/date_picker_header_view.xml
@@ -22,4 +22,5 @@
     android:gravity="center"
     android:includeFontPadding="false"
     android:textColor="@color/white"
-    android:textSize="@dimen/date_picker_header_text_size" />
+    android:textSize="@dimen/date_picker_header_text_size"
+    android:importantForAccessibility="no" />
