--- a/res/layout/date_picker_selected_date.xml
+++ b/res/layout/date_picker_selected_date.xml
@@ -24,7 +24,7 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <com.android.datetimepicker.AccessibleLinearLayout
         android:id="@+id/date_picker_month_and_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,9 +55,9 @@
             android:includeFontPadding="false"
             android:textColor="@color/date_picker_selector"
             android:textSize="@dimen/selected_date_day_size" />
-    </LinearLayout>
+    </com.android.datetimepicker.AccessibleLinearLayout>
 
-    <TextView
+    <com.android.datetimepicker.AccessibleTextView
         android:id="@+id/date_picker_year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
