--- a/res/layout/date_picker_view_animator.xml
+++ b/res/layout/date_picker_view_animator.xml
@@ -13,7 +13,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+<com.android.datetimepicker.date.AccessibleDateAnimator
+     xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/animator"
      android:layout_width="@dimen/date_picker_component_width"
      android:layout_height="@dimen/date_picker_view_animator_height"
