--- a/res/layout/time_header_label.xml
+++ b/res/layout/time_header_label.xml
@@ -46,7 +46,7 @@
             android:layout_marginLeft="@dimen/extra_time_label_margin"
             android:layout_marginRight="@dimen/extra_time_label_margin"
             android:layout_centerVertical="true" >
-            <com.android.datetimepicker.FakeButton
+            <com.android.datetimepicker.AccessibleTextView
                 android:id="@+id/hours"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,7 +87,7 @@
             android:layout_marginLeft="@dimen/extra_time_label_margin"
             android:layout_marginRight="@dimen/extra_time_label_margin"
             android:layout_centerVertical="true" >
-            <com.android.datetimepicker.FakeButton
+            <com.android.datetimepicker.AccessibleTextView
                 android:id="@+id/minutes"
                 style="@style/time_label"
                 android:layout_width="wrap_content"
@@ -96,8 +96,7 @@
                 android:text="@string/time_placeholder"
                 android:layout_gravity="center" />
         </FrameLayout>
-
-        <com.android.datetimepicker.FakeButton
+        <com.android.datetimepicker.AccessibleTextView
             android:id="@+id/ampm_hitspace"
             android:layout_width="@dimen/ampm_label_size"
             android:layout_height="wrap_content"
