--- a/res/layout/time_header_label.xml
+++ b/res/layout/time_header_label.xml
@@ -20,11 +20,14 @@
       android:layout_gravity="center"
       android:background="@color/white" >
         <View
-            android:id="@+id/empty_view"
+            android:id="@+id/center_view"
             android:layout_width="1dp"
             android:layout_height="1dp"
             android:background="#00000000"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            android:importantForAccessibility="no" />
+
         <TextView
             android:id="@+id/hour_space"
             android:layout_width="wrap_content"
@@ -53,6 +56,7 @@
                 android:layout_gravity="center"
                 style="@style/time_label" />
             </FrameLayout>
+
         <TextView
             android:id="@+id/separator"
             android:layout_width="wrap_content"
@@ -60,10 +64,11 @@
             android:text="@string/time_separator"
             android:paddingLeft="@dimen/separator_padding"
             android:paddingRight="@dimen/separator_padding"
-            android:layout_alignRight="@+id/empty_view"
+            android:layout_alignRight="@+id/center_view"
             android:layout_centerVertical="true"
             style="@style/time_label"
             android:importantForAccessibility="no" />
+
         <TextView
             android:id="@+id/minutes_space"
             android:layout_width="wrap_content"
@@ -91,6 +96,7 @@
                 android:text="@string/time_placeholder"
                 android:layout_gravity="center" />
         </FrameLayout>
+
         <com.android.datetimepicker.FakeButton
             android:id="@+id/ampm_hitspace"
             android:layout_width="@dimen/ampm_label_size"
