--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,11 +17,11 @@
 <resources>
 
     <color name="white">#ffffff</color>
-    <color name="circle_background">#08000000</color>
-    <color name="line_background">#33000000</color>
-    <color name="ampm_text_color">#7F000000</color>
-    <color name="done_text_color">#99000000</color>
-    <color name="numbers_text_color">#CC000000</color>
+    <color name="circle_background">#f2f2f2</color>
+    <color name="line_background">#cccccc</color>
+    <color name="ampm_text_color">#8c8c8c</color>
+    <color name="done_text_color">#8c8c8c</color>
+    <color name="numbers_text_color">#8c8c8c</color>
 
     <color name="transparent_black">#7F000000</color>
     <color name="blue">#33b5e5</color>
@@ -29,7 +29,6 @@
     <color name="date_picker_text_normal">#FF999999</color>
 
     <color name="calendar_header">#999999</color>
-    <color name="date_picker_view_animator">#FFECEDEE</color>
+    <color name="date_picker_view_animator">#f2f2f2</color>
     <color name="calendar_selected_date_text">#FFD1D2D4</color>
-    <color name="done_button_color">#FFECEDEE</color>
 </resources>
