--- a/res/layout-sw600dp-land/date_picker_dialog.xml
+++ b/res/layout-sw600dp-land/date_picker_dialog.xml
@@ -16,7 +16,7 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/date_picker_view_animator_height"
     android:gravity="center"
     android:orientation="horizontal" >
 
@@ -27,15 +27,19 @@
         android:background="@color/white"
         android:orientation="vertical" >
 
-        <include layout="@layout/date_picker_header_view" />
-
-        <include
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="0dip"
             android:layout_weight="1"
-            layout="@layout/date_picker_selected_date" />
+            android:orientation="vertical" >
+
+            <include layout="@layout/date_picker_header_view" />
+
+            <include layout="@layout/date_picker_selected_date" />
+        </LinearLayout>
 
         <View
-            android:layout_width="@dimen/date_picker_component_width"
+            android:layout_width="match_parent"
             android:layout_height="1dip"
             android:background="@color/line_background" />
 
