--- a/res/layout-sw270dp-h560dp-land/date_picker_dialog.xml
+++ b/res/layout-sw270dp-h560dp-land/date_picker_dialog.xml
@@ -22,7 +22,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="@color/white"
         android:orientation="vertical" >
