Date/Time Picker done button minheight 48dp Date Picker minor UI tweaks
Bug: 8581974
Change-Id: Ica0f33e55686ba75a85df9bb6b54eda31100e062

--- a/res/layout/date_picker_done_button.xml
+++ b/res/layout/date_picker_done_button.xml
@@ -24,6 +24,8 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/done_label" 
+        android:minHeight="48dp"
+        android:text="@string/done_label"
+        android:textSize="@dimen/done_label_size"
         android:textColor="@color/done_text_color" />
 </LinearLayout>
