--- a/res/layout/time_picker_dialog.xml
+++ b/res/layout/time_picker_dialog.xml
@@ -51,6 +51,7 @@
             android:id="@+id/done_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:text="@string/done_label"
             android:textSize="@dimen/done_label_size"
             android:textColor="@color/done_text_color"
