--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="neutral_pressed">#33999999</color>
     <color name="darker_blue">#0099cc</color>
     <color name="date_picker_text_normal">#ff999999</color>
+    <color name="date_picker_text_disabled">#ccc</color>
 
     <color name="calendar_header">#999999</color>
     <color name="date_picker_view_animator">#f2f2f2</color>
